Fixed issue #8. Added a logout button that is only visible to logged in users

--- a/app/views/menu.scala.html
+++ b/app/views/menu.scala.html
@@ -48,6 +48,9 @@ Copyright 2013 Anthony Christe
               routes.PowerQualityMonitoring.publicMonitor())
           }
           </ul>
+          @if(!publicMenu) {
+            <a href="@routes.Application.logout()" class="btn btn-primary pull-right">Logout</a>
+          }
         </div>
       </div>
     </div>
