--- a/app/views/admin/updatecdsi.scala.html
+++ b/app/views/admin/updatecdsi.scala.html
@@ -44,7 +44,7 @@ Copyright 2013 Anthony Christe
       <tbody>
         @form(
           routes.Administration.updateCdsi(Long.parseLong(opqDeviceForm("primaryKey").value)),
-          'id -> opqDeviceForm("primaryKey").value,
+          'id -> "updateCdsiForm",
           'class -> "form-inline"
         ) {
           <input type="hidden" name="state" id="state" value="@opqDeviceForm("state").value">
@@ -93,7 +93,7 @@ Copyright 2013 Anthony Christe
               <input type="button" id="previewBtn" class="btn btn-info pull-right" value="Preview">
             </td>
             <td>
-              <input type="submit" id="saveBtn" class="btn btn-warning pull-right" value="Save">
+              <input type="button" id="saveBtn" class="btn btn-warning pull-right" value="Save">
             </td>
           </tr>
         }
@@ -105,104 +105,21 @@ Copyright 2013 Anthony Christe
   Start of cdsi map
   *@
   <script src="@routes.Assets.at("javascripts/leaflet.js")" type="text/javascript"></script>
+  <script src="@routes.Assets.at("javascripts/opq-maps.js")" type="text/javascript"></script>
   <div id="cdsi-map" class="span9"></div>
   <script type="text/javascript">
     /* Make sure the leaflet CSS is loaded */
     addDynamicCss ( '  @routes.Assets.at("stylesheets/leaflet.css") ');
+    initMap("cdsi-map", "state", "city", "zip", "streetName", "streetNumber", "latitude", "longitude");
 
-    /* Construct an instance of the leaflet map using OSM tiles */
-    var map           = L.map ( 'cdsi-map' ) ;
-    var osmUrl        = 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png' ;
-    var osmAttrib     = 'Map data © OpenStreetMap contributors' ;
-    var osm           = new L.TileLayer ( osmUrl, { attribution : osmAttrib } ) ;
-    var boundingBoxLayer = new L.layerGroup( ).addTo(map);
-    var geoJsonLayer  = L.geoJson ( ).addTo ( map );
-    var iconLayer = new L.layerGroup( ).addTo(map);
-    var deviceMarker = L.icon({iconUrl: '@routes.Assets.at("images/opq-icon.png")'});
-    map.addLayer ( osm ) ;
-    map.setView ([ 21.4667, - 157.9833 ], 10 ) ;
-
-    /* When the preview button is clicked, update the map */
-    $("#previewBtn" ).on("click", function (event) {
-      getMapInfo();
+    $("#previewBtn" ).on("click", function(){
+      previewMap();
     });
 
-    /* Makes an ajax json request using the current available address information */
-    function getMapInfo() {
-      var state         = $ ( "#state" ).val( );
-      var city          = $ ( "#city" ).val( );
-      var zip           = $ ( "#zip" ).val( );
-      var streetName    = $ ( "#streetName" ).val ( );
-      var streetNumber  = $ ( "#streetNumber" ).val ( );
-      var query         = streetNumber + " " + streetName + " " + city + " " + state + " " + zip;
-
-      var nominatimApi = "http://nominatim.openstreetmap.org/search/";
-
-      /* Make the actual request. Once the data has been received, call updateMap with new data */
-      $.getJSON ( nominatimApi, {
-        q : query,
-        countrycodes : "us",
-        format : "json",
-        polygon_geojson : 1,
-        email : "achriste@@hawaii.edu "
-      }).done(function (data) {
-        updateMap(data);
-      });
-    }
-
-    /* Attempts to draw a bounding box, polygon, and marker of with given address information */
-    function updateMap(data) {
-      /* First clear the map */
-      clearMap();
-
-      /* The leaflet API may return multiple locations. The first location _should_ be the one we're looking for,
-         but there is no guaranty. Handling multiple locations might take some thinking, so hopefully the first
-         location returned works.
-       */
-      var dataIndex = 0;
-
-      /* Retrieve data passed in from json request */
-      var boundingBoxCoords = data[ dataIndex ].boundingbox;
-      var latitude = data[ dataIndex ].lat;
-      var longitude = data[ dataIndex ].lon;
-      var polygon = data[ dataIndex ].geojson;
-
-      /* Update the hidden lat/lon fields */
-      $("#latitude" ).val(latitude);
-      $("#longitude" ).val(longitude);
-
-      /* Create bounding box polygon */
-      var southWest   = new L.LatLng(boundingBoxCoords[0], boundingBoxCoords[2]);
-      var northEast   = new L.LatLng(boundingBoxCoords[1], boundingBoxCoords[3]);
-      var bounds      = new L.LatLngBounds ( southWest, northEast ) ;
-      L.polygon ([
-        bounds.getNorthWest ( ),
-        bounds.getNorthEast ( ),
-        bounds.getSouthEast ( ),
-        bounds.getSouthWest ( )
-      ], {color: 'red'} ).addTo(boundingBoxLayer);
-
-      /* Create geojson polygon */
-      geoJsonLayer.addData ( polygon ) ;
-
-      /* Add device icon */
-      L.marker([latitude, longitude], {icon: deviceMarker}).addTo(iconLayer)
-        .bindPopup("Latitude: " + latitude + "<br />" + "Longitude: " + longitude);
-
-      /* Center over new latitude/longitude */
-      map.panTo([latitude, longitude], 10);
-    }
-
-    /*
-      Clears all layers on the map and re-initializes them.
-     */
-    function clearMap() {
-      map.removeLayer(geoJsonLayer);
-      map.removeLayer(boundingBoxLayer);
-      map.removeLayer(iconLayer);
-      geoJsonLayer = L.geoJson ( ).addTo ( map ) ;
-      boundingBoxLayer = new L.layerGroup( ).addTo(map);
-      iconLayer = new L.layerGroup( ).addTo(map);
-    }
+    $("#saveBtn" ).on("click", function() {
+      var data = getMapInfo();
+      updateLatLong(data);
+      $("#updateCdsiForm").submit();
+    });
   </script>
 }
