--- a/app/views/publicpowerqualitymonitoring.scala.html
+++ b/app/views/publicpowerqualitymonitoring.scala.html
@@ -167,16 +167,18 @@ Copyright 2013 Anthony Christe
 
         // Display alerts
         @for(alert <- alerts) {
-          @if(alert.getAlertType().equals(models.Alert.AlertType.FREQUENCY)) {
-            L.marker([@alert.getDevice.getLatitude, @alert.getDevice.getLongitude], {icon: frequencyMarker}).addTo(map)
-            .bindPopup(alertTemplate('@alert.getAlertType', '@utils.DateUtils.toDateTime(alert.getTimestamp)', @alert.getAlertDuration + ' ms',
-            @alert.getAlertValue + 'Hz', @alert.getDevice.getLatitude, @alert.getDevice.getLongitude));
+          @if(alert.getDevice != null) {
+            @if(alert.getAlertType().equals(models.Alert.AlertType.FREQUENCY)) {
+              L.marker([@alert.getDevice.getLatitude, @alert.getDevice.getLongitude], {icon: frequencyMarker}).addTo(map)
+              .bindPopup(alertTemplate('@alert.getAlertType', '@utils.DateUtils.toDateTime(alert.getTimestamp)', @alert.getAlertDuration + ' ms',
+              @alert.getAlertValue + 'Hz', @alert.getDevice.getLatitude, @alert.getDevice.getLongitude));
+            }
+            @if(alert.getAlertType().equals(models.Alert.AlertType.VOLTAGE)) {
+              L.marker([@alert.getDevice.getLatitude, @alert.getDevice.getLongitude], {icon: voltageMarker}).addTo(map)
+              .bindPopup(alertTemplate('@alert.getAlertType', '@utils.DateUtils.toDateTime(alert.getTimestamp)', @alert.getAlertDuration + ' ms',
+              @alert.getAlertValue + ' V', @alert.getDevice.getLatitude, @alert.getDevice.getLongitude));
+            }
           }
-          @if(alert.getAlertType().equals(models.Alert.AlertType.VOLTAGE)) {
-            L.marker([@alert.getDevice.getLatitude, @alert.getDevice.getLongitude], {icon: voltageMarker}).addTo(map)
-            .bindPopup(alertTemplate('@alert.getAlertType', '@utils.DateUtils.toDateTime(alert.getTimestamp)', @alert.getAlertDuration + ' ms',
-            @alert.getAlertValue + ' V', @alert.getDevice.getLatitude, @alert.getDevice.getLongitude));
-      }
       }
       </script>
 
