Updated homepage with background image and tweaked colors

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,13 +17,16 @@ along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
 Copyright 2013 Anthony Christe
 *@
 
+
+
 @main("Getting Started with OPQ", menu("Getting Started with OPQ", true)) {
+
   <div class="container">
     <div class="hero-unit hidden-phone">
-      <h1>Welcome to Open Power Quality</h1>
-      <p>To get started, select one of the two options below.</p>
+      <h1 class="hero-font">Welcome to Open Power Quality</h1>
+      <p class="hero-font">To get started, select one of the two options below.</p>
       <p>
-        <a class="btn btn-large btn-inverse" href="@routes.Wizard.index()"><span class="btn-label">
+        <a class="btn btn-large btn-success" href="@routes.Wizard.index()"><span class="btn-label">
           Set Up Device</span></a>
         <a class="btn btn-large btn-primary" href="@routes.Application.login()"><span class="btn-label">Login</span></a>
       </p>
@@ -37,7 +40,7 @@ Copyright 2013 Anthony Christe
             allows for distributed power quality analysis.
           </p>
           <p>
-            <a class="btn btn-primary" href="#"><span class="btn-label">Find Out More</span></a>
+            <a class="btn btn-primary" href="http://openpowerquality.org/"><span class="btn-label">Find Out More</span></a>
           </p>
         </div>
       </div>
