--- a/app/views/admin/updatecdsi.scala.html
+++ b/app/views/admin/updatecdsi.scala.html
@@ -60,8 +60,8 @@ Copyright 2013 Anthony Christe
 
             @* Participation in CDSI *@
             <td>
-              @checkbox(opqDeviceForm("participatingInCdsi"), '_showConstraints -> false, '_label -> "")
-              <input type="hidden" name="participatingInCdsi" value="false" />
+              @checkbox(opqDeviceForm("sharingData"), '_showConstraints -> false, '_label -> "")
+              <input type="hidden" name="sharingData" value="false" />
             </td>
 
             @* City *@
