--- a/app/views/wizard/wizard_cdsi.scala.html
+++ b/app/views/wizard/wizard_cdsi.scala.html
@@ -34,8 +34,8 @@ Copyright 2013 Anthony Christe
         'id -> "deviceStreetName", 'class -> "input-medium")
       @inputText(opqDeviceForm("streetNumber"), '_label -> "Device Street Number", 'placeholder -> "111",
         'id -> "deviceStreetNumber", 'class -> "input-medium")
-      @checkbox(opqDeviceForm("participatingInCdsi"), '_label -> "Participate in CDSI", 'id -> "participateInCdsi")
-      <input type="hidden" name="participatingInCdsi" value="false" />
+      @checkbox(opqDeviceForm("sharingData"), '_label -> "Participate in CDSI", 'id -> "participateInCdsi")
+      <input type="hidden" name="sharingData" value="false" />
       <input type="button" id="previewLocation" value="Preview Location" class="btn btn-info pull-right" />
     </div>
     <div class="span5">
