Updated admin to use new map interface. Renamed CDSI to data sharing

--- a/app/views/admin/admin.scala.html
+++ b/app/views/admin/admin.scala.html
@@ -38,7 +38,7 @@ Copyright 2013 Anthony Christe
           @createMenuItem("User Administration", "user", routes.Administration.user())
           @createMenuItem("Device Administration", "device", routes.Administration.device())
           @createMenuItem("Alert Administration", "alert", routes.Administration.alert())
-          @createMenuItem("CDSI Administration", "cdsi", routes.Administration.cdsi())
+          @createMenuItem("Data Sharing", "data", routes.Administration.dataSharing())
         </ul>
         <div class="well">
           <p>
