--- a/app/views/wizard/wizard.scala.html
+++ b/app/views/wizard/wizard.scala.html
@@ -34,9 +34,9 @@ Copyright 2013 Anthony Christe
 
       $(document).ready(function() {
       $('#opq-wizard').on('finished', function(e, data) {
-        var data = getMapInfo();
-        updateLatLong(data);
-        document.wizardForm.submit();
+        //var data = getMapInfo();
+        //updateLatLong(data);
+        //document.wizardForm.submit();
       });
       });
 
